--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <h2>An Unordered HTML List</h2>
+    <h2>ECONOMICS WITH ERIC</h2>
     
     <ul>
       <li><a href="valor.html">valor</a></li>
