--- a/valor.html
+++ b/valor.html
@@ -1,6 +1,6 @@
 <BODy>
-    <p>Esta pagina te dirige a la pagina web de shopify</p> 
-    <a href = "https://www.shopify.com/es/">SHOPIFY</a>
+    <p>Esta pagina te dirige a la de volumen</p> 
+    <a href = volumen>SHOPIFY</a>
     <p>!PASOS A SEGUIR PARA TENER UNA VENTA EXITOSA!</p>
    <P>   1. PRIMER PASO. Conocer el PRODUCTO. ...<BR>
          2. SEGUNDO PASO. Prospección del mercado. ...<BR>
