--- a/VOLUMEN.html
+++ b/VOLUMEN.html
@@ -1,6 +1,6 @@
 <BODy>
     <p>Esta pagina te dirige a la de volumen</p> 
-    <a href = volumen>SHOPIFY</a>
+    <a href = >HARRIS</a>
     <p>!PASOS A SEGUIR PARA TENER UNA VENTA EXITOSA!</p>
    <P>   1. PRIMER PASO. Conocer el PRODUCTO. ...<BR>
          2. SEGUNDO PASO. Prospección del mercado. ...<BR>
