--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h2>FITRIC</h2>
     
     <ul>
-        <li>SEGUN TUS DESEOS DE BAJAR DE PESO O SUBIR O MANTENERSE IGUAL ELIGA UNA DE LAS TRES OPCIONES</li>
-        <li><a href="VOLUMEN.html">https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTwkLvyq5teYRunJSOlAHDOeWLyQWyKzd0Y1m4SlyCOSQ&s</a></li><br>
-        <li><a href="DEFINICIONhtml">Definicion</a></li><br>
+        <li>SEGUN TUS DESEOS DE BAJAR DE PESO O SUBIR O MANTENERSE IGUAL ELIGA UNA DE LAS TRES OPCIONES</li><br>
+        <li><a href="VOLUMEN.html">VOLUMEN</a></li><br>
+        <li><a href="DEFINICIONhtml">DEFINICION</a></li><br>
         <li><a href="MANTENERSE EN LA MISMA CONDICION">SAME</a></li><br>
     </ul>  
     
