--- a/VOLUMEN.html
+++ b/VOLUMEN.html
@@ -1,14 +1,22 @@
 <BODy>
-    <p>Esta pagina te dirige a la de volumen</p> 
+    <p>VOLUMEN</p> <BR>
+    <p>CALCULADORA DE KCAL</p>    
     <a href = https://es.calcuworld.com/calculadora-nutricional/calculadora-de-calorias-harris-benedict>HARRIS</a>
-    <p>!PASOS A SEGUIR PARA TENER UNA VENTA EXITOSA!</p>
-   <P>   1. PRIMER PASO. Conocer el PRODUCTO. ...<BR>
-         2. SEGUNDO PASO. Prospección del mercado. ...<BR>
-         3. TERCER PASO. El contacto. ...<BR>
-         4. CUARTO PASO. Establecer las necesidades. ...<BR>
-         5. QUINTO PASO. La presentación del PRODUCTO. ...<BR>
-         6. SEXTO PASO. Cerrar la venta. ...<BR>
-         7. SÉPTIMO PASO. Seguir hasta el final.
-     </P>
+    <p>
+        Si tu meta es ganar peso y musculo deberas seguir los consejos los cuales te proporcionare en los sigueientes pasos.<br>
+
+        <ol>
+            <li>Mediante la calculadora de harris benedict calcularas tus kcal necesarias para vivir.</li>
+            <li>A continuacion, el resultado obtenido le deberas sumar entre 300-500 kcal para poder hacer un superavit el cual te proporcionara las kcal necesarias para poder subir de peso o ganar musculo.</li>
+            <li>Posteriormente deberas hacer una dieta acorde a las kcal obtenidas con la ayuda de un profesional.</li>
+            <li>Por utltimo tambien deberas introducir ejercicios de fuerza para que te proporcione la congestion necesaria del musculo para que crezca.</li>
+        </ol>
+    </p>
+    
    
  </BODy>
+ 
+ <meta charset="utf-8">
+ <link rel="stylesheet" href="estilo.css">
+ <title>VOLUMEN</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
