--- a/VOLUMEN.html
+++ b/VOLUMEN.html
@@ -1,22 +1,32 @@
+<!DOCTYPE html>
+ <meta charset="utf-8">
+ <link rel="stylesheet" href="estilo.css">
+ <title>VOLUMEN</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+
+
+
 <BODy>
-    <p>VOLUMEN</p> <BR>
+    <h2>VOLUMEN</h2>
+    
     <p>CALCULADORA DE KCAL</p>    
     <a href = https://es.calcuworld.com/calculadora-nutricional/calculadora-de-calorias-harris-benedict>HARRIS</a>
     <p>
         Si tu meta es ganar peso y musculo deberas seguir los consejos los cuales te proporcionare en los sigueientes pasos.<br>
 
         <ol>
-            <li>Mediante la calculadora de harris benedict calcularas tus kcal necesarias para vivir.</li>
-            <li>A continuacion, el resultado obtenido le deberas sumar entre 300-500 kcal para poder hacer un superavit el cual te proporcionara las kcal necesarias para poder subir de peso o ganar musculo.</li>
-            <li>Posteriormente deberas hacer una dieta acorde a las kcal obtenidas con la ayuda de un profesional.</li>
-            <li>Por utltimo tambien deberas introducir ejercicios de fuerza para que te proporcione la congestion necesaria del musculo para que crezca.</li>
+            <li>Mediante la calculadora de harris benedict calcularas tus kcal necesarias para vivir.</li><br>
+            <li>A continuacion, el resultado obtenido le deberas sumar entre 300-500 kcal para poder hacer un superavit el cual te proporcionara las kcal necesarias para poder subir de peso o ganar musculo.</li><br>
+            <li>Posteriormente deberas hacer una dieta acorde a las kcal obtenidas con la ayuda de un profesional.</li><br>
+            <li>Por utltimo tambien deberas introducir ejercicios de fuerza para que te proporcione la congestion necesaria del musculo para que crezca.</li><br>
         </ol>
     </p>
     
    
  </BODy>
  
- <meta charset="utf-8">
- <link rel="stylesheet" href="estilo.css">
- <title>VOLUMEN</title>
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+ 
