--- a/DEFINICION.HTML
+++ b/DEFINICION.HTML
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
  <meta charset="utf-8">
- <link rel="stylesheet" href="estilo.css">
+ <link rel="stylesheet" href="estilodef.css">
  <title>DEFINICION</title>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
