--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
 
     </body>  
 <p>
+  <div class="fila">
    
-   <p class="p1"><a href="VOLUMEN.html">VOLUMEN</a></p>
+   <div class="p1"><a href="VOLUMEN.html">VOLUMEN</a></div>
 
-    <p class="p2"><a href="DEFINICION.HTML">DEFINICION</a></p>
+    <div class="p2"><a href="DEFINICION.HTML">DEFINICION</a></div>
     
-  <p class="p3"><a href="ejercicios.html">EJERCICIOS</a></p>
+    <div class="p3"><a href="ejercicios.html">EJERCICIOS</a></div>
+</div>
