--- a/index.html
+++ b/index.html
@@ -48,9 +48,15 @@
 <p>
   <div class="fila">
    
-   <div class="p1"><a href="VOLUMEN.html">VOLUMEN</a></div>
+   <div class="p1">
+    <a href="VOLUMEN.html">
+    <img src="IMG/pesas.jpeg" class="IMGP1">
+  </a></div>
 
-    <div class="p2"><a href="DEFINICION.HTML">DEFINICION</a></div>
+    <div class="p2">
+      <a href="DEFINICION.HTML">
+      <img src="IMG/DEF.jpeg" class="IMGP2">
+  </a></div>
     
-    <div class="p3"><a href="ejercicios.html">EJERCICIOS</a></div>
+    
 </div>
