--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
       <li>TU SEGURIDAD MEJORA</li><br></p>
       </details>
       
-      
+
+      <details open>
+        <summary>INDICE DE MASSA CORPORAL (IMC)</summary>
+        <p> 
+          <li><a href = https://www.texasheart.org/heart-health/heart-information-center/topics/calculadora-del-indice-de-masa-corporal-imc>IMC</a></li><BR>
+        </p>
+      </details>
 
 
 
